fix small bug in top corner cell - unaffects results

--- a/FSI_Convection_add_gradUT.ipynb
+++ b/FSI_Convection_add_gradUT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "3bdf423c",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "c9a54143",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "e6e6052f",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "d4f7242f",
    "metadata": {},
    "outputs": [],
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "b83a4146",
    "metadata": {},
    "outputs": [],
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "58cdd3bd",
    "metadata": {},
    "outputs": [],
@@ -1761,16 +1761,16 @@
     "            gradu_T[coeff+1] =(2/3*dy)*-v[i-eqs*Nx] #(2/3dy)*-uS: du_P/dy\n",
     "            \n",
     "            gradv_T[coeff] = (2/3*dx)*(v[i+4]-vin[1]) #(2/3dx)*vE-v_in: dv_P/dx\n",
-    "            gradv_T[coeff+1] =(2/3*dy)*v[i-eqs*Nx+1] #(2/3dx)*vS: dv_P/dy\n",
+    "            gradv_T[coeff+1] =(2/3*dy)*-v[i-eqs*Nx+1] #(2/3dx)*vS: dv_P/dy\n",
     "            \n",
     "        #top right\n",
     "        elif i == topright:\n",
     "            \n",
     "            gradu_T[coeff] = (v[i]-v[i-3])/(2*dx) #(1/2)*(du/dx)w == (uP-uW)/2dx: du_P/dx\n",
-    "            gradu_T[coeff+1] =(2/3*dy)*v[i-eqs*Nx] #(2/3dx)*uS: du_P/dy\n",
+    "            gradu_T[coeff+1] =(2/3*dy)*-v[i-eqs*Nx] #(2/3dx)*uS: du_P/dy\n",
     "            \n",
     "            gradv_T[coeff] = (v[i+1]-v[i-2])/(2*dx) #(1/2)*(du/dx)w == (vP-vW)/2dx: dv_P/dx\n",
-    "            gradv_T[coeff+1] =(2/3*dy)*v[i-eqs*Nx+1] #(2/3dy)*vS: dv_P/dy\n",
+    "            gradv_T[coeff+1] =(2/3*dy)*-v[i-eqs*Nx+1] #(2/3dy)*vS: dv_P/dy\n",
     "            \n",
     "        #SIDES\n",
     "        #bottom\n",
@@ -1836,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "2b602ee3",
    "metadata": {},
    "outputs": [],
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "f10d2b29",
    "metadata": {},
    "outputs": [],
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "95163995",
    "metadata": {},
    "outputs": [],
@@ -2232,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "1d6d4def",
    "metadata": {},
    "outputs": [
@@ -2244,74 +2244,74 @@
       "1 1 1 1\n",
       "\n",
       "\n",
-      "2 0.007847215977366363 0.07295000160298774 25020.049676494786\n",
+      "2 0.007847216006719535 0.07295000262277881 25020.050747534766\n",
       "\n",
       "\n",
-      "3 0.003961776339287276 0.024950292437064363 4025.9072664065984\n",
+      "3 0.003961781234080101 0.024950310668229718 4025.898616915047\n",
       "\n",
       "\n",
-      "4 0.0010845058621051108 0.01302321282926518 3517.3425220169356\n",
+      "4 0.0010845203139429702 0.01302325044251749 3517.3443104342955\n",
       "\n",
       "\n",
-      "5 0.0009482096013913697 0.006606439493646183 821.2073150469714\n",
+      "5 0.0009482394875761349 0.0066065355317713945 821.2054459734103\n",
       "\n",
       "\n",
-      "6 0.00032898336923875825 0.003166414062372265 650.2151291280505\n",
+      "6 0.0003289936139753027 0.0031664415476636357 650.2262687519531\n",
       "\n",
       "\n",
-      "7 0.00020107272336125615 0.0016125814467512314 224.92777933022427\n",
+      "7 0.00020107106387233276 0.0016125655305176795 224.94243343468455\n",
       "\n",
       "\n",
-      "8 8.426939782783407e-05 0.0007997090861482472 145.3411968528289\n",
+      "8 8.42768326469871e-05 0.0007997216491702448 145.34385537755358\n",
       "\n",
       "\n",
-      "9 4.209409741993578e-05 0.00040668790441256787 62.00597651830445\n",
+      "9 4.2098872302725965e-05 0.00040669272600434383 62.0145350349664\n",
       "\n",
       "\n",
-      "10 2.019283027128727e-05 0.00021093857316151497 35.16681798674279\n",
+      "10 2.018115819870754e-05 0.00021090868341134056 35.173019707444645\n",
       "\n",
       "\n",
-      "11 9.602212387553185e-06 0.00011011912983563176 16.236874800150222\n",
+      "11 9.591350932758649e-06 0.00011009927404467472 16.23161321360106\n",
       "\n",
       "\n",
-      "12 5.031445721598975e-06 5.897516333042231e-05 8.753577302723432\n",
+      "12 5.0234289770685584e-06 5.896094215588264e-05 8.750449006194092\n",
       "\n",
       "\n",
-      "13 2.525508943795595e-06 3.1685309820325406e-05 4.123196743757383\n",
+      "13 2.526243800590232e-06 3.1689448658366373e-05 4.120358953165922\n",
       "\n",
       "\n",
-      "14 1.3794220851696485e-06 1.72719130009748e-05 2.1991543047769975\n",
+      "14 1.385545899488449e-06 1.7284515126244008e-05 2.203680988807866\n",
       "\n",
       "\n",
-      "15 7.406875455474223e-07 9.4469313315367e-06 1.0331799416453995\n",
+      "15 7.413770292943278e-07 9.448205072075484e-06 1.0440567735451218\n",
       "\n",
       "\n",
-      "16 4.095588863483965e-07 5.1937042663326205e-06 0.5583492509944569\n",
+      "16 4.0978582108423e-07 5.194030720747216e-06 0.5620084957475403\n",
       "\n",
       "\n",
-      "17 2.2778125853931072e-07 2.86518196636872e-06 0.2641955786356771\n",
+      "17 2.2730028613029472e-07 2.864144234837276e-06 0.26388820744538455\n",
       "\n",
       "\n",
-      "18 1.2629494505880838e-07 1.5822369194524292e-06 0.14642680379613485\n",
+      "18 1.253747884053978e-07 1.5807671616587201e-06 0.14460404960576928\n",
       "\n",
       "\n",
-      "19 6.94674874964454e-08 8.733262875691021e-07 0.06812644550689437\n",
+      "19 6.977271387497025e-08 8.756517946189955e-07 0.0697939691984387\n",
       "\n",
       "\n",
-      "20 3.971980376606801e-08 4.856085671141727e-07 0.04380853887123045\n",
+      "20 4.061092613513916e-08 4.864832543392489e-07 0.0435878678296336\n",
       "\n",
       "\n",
-      "21 2.3171846112380706e-08 2.714259240019759e-07 0.027129833597790136\n",
+      "21 2.2494152874287256e-08 2.6931199543013234e-07 0.025504764941394198\n",
       "\n",
       "\n",
-      "22 1.466412778269061e-08 1.5590727058692906e-07 0.015663765966525175\n",
+      "22 1.369673711005358e-08 1.5455401342730574e-07 0.02296538332937776\n",
       "\n",
       "\n",
       "Reynolds Number = 0.0029999999999999996\n",
-      "Maximum Velocity 2.9714798104683686e-06\n",
-      "Maximum Pressure 91.89218634407013\n",
-      "avg solid disp 2.1514705341592416e-08\n",
-      "max solid disp 1.640756233759458e-07\n"
+      "Maximum Velocity 2.971479832397411e-06\n",
+      "Maximum Pressure 91.89218884479568\n",
+      "avg solid disp 2.151470102396969e-08\n",
+      "max solid disp 1.6407561869786606e-07\n"
      ]
     },
     {
@@ -2321,8 +2321,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 38>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m cells_to_coord \u001b[38;5;241m=\u001b[39m map_cells_to_coordinates(Nx,Ny,Lx,Ly)\n\u001b[1;32m     36\u001b[0m coord_to_cells \u001b[38;5;241m=\u001b[39m {v: k \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m cells_to_coord\u001b[38;5;241m.\u001b[39mitems()}\n\u001b[0;32m---> 38\u001b[0m v,iterations,residuals \u001b[38;5;241m=\u001b[39m \u001b[43mFSI\u001b[49m\u001b[43m(\u001b[49m\u001b[43mLx\u001b[49m\u001b[43m,\u001b[49m\u001b[43mLy\u001b[49m\u001b[43m,\u001b[49m\u001b[43mNx\u001b[49m\u001b[43m,\u001b[49m\u001b[43mNy\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmu\u001b[49m\u001b[43m,\u001b[49m\u001b[43mshear\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrhof\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrhos\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvin\u001b[49m\u001b[43m,\u001b[49m\u001b[43mscaleFactor\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmax_its\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtol\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvtk\u001b[49m\u001b[43m,\u001b[49m\u001b[43msolid_cells\u001b[49m\u001b[43m,\u001b[49m\u001b[43mon_interface\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     40\u001b[0m vmag \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(np\u001b[38;5;241m.\u001b[39msquare(v[\u001b[38;5;241m0\u001b[39m::\u001b[38;5;241m3\u001b[39m]\u001b[38;5;241m.\u001b[39mreshape(M,\u001b[38;5;241m1\u001b[39m))\u001b[38;5;241m+\u001b[39mnp\u001b[38;5;241m.\u001b[39msquare(v[\u001b[38;5;241m1\u001b[39m::\u001b[38;5;241m3\u001b[39m]\u001b[38;5;241m.\u001b[39mreshape(M,\u001b[38;5;241m1\u001b[39m)))\n\u001b[1;32m     41\u001b[0m p \u001b[38;5;241m=\u001b[39m v[\u001b[38;5;241m2\u001b[39m::\u001b[38;5;241m3\u001b[39m]\u001b[38;5;241m.\u001b[39mreshape(M,\u001b[38;5;241m1\u001b[39m)\n",
-      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36mFSI\u001b[0;34m(Lx, Ly, Nx, Ny, mu, shear, dt, rhof, rhos, vin, scaleFactor, max_its, tol, vtk, solid_cells, on_interface)\u001b[0m\n\u001b[1;32m    331\u001b[0m \u001b[38;5;66;03m#     print(p[Nx])\u001b[39;00m\n\u001b[1;32m    332\u001b[0m     \u001b[38;5;66;03m#export to VTK format\u001b[39;00m\n\u001b[1;32m    333\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m vtk:\n\u001b[0;32m--> 334\u001b[0m         \u001b[43msolid_vtk_results\u001b[49m(v,dt\u001b[38;5;241m*\u001b[39mvmag[solid_cells],p[solid_cells],Nx,Ny,Lx,Ly,solid_cells,Re)\n\u001b[1;32m    335\u001b[0m         fluid_vtk_results(v,vmag,p,Nx,Ny,Lx,Ly,solid_cells,Re)        \n\u001b[1;32m    336\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m v,iterations,residuals\n",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 38>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m cells_to_coord \u001b[38;5;241m=\u001b[39m map_cells_to_coordinates(Nx,Ny,Lx,Ly)\n\u001b[1;32m     36\u001b[0m coord_to_cells \u001b[38;5;241m=\u001b[39m {v: k \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m cells_to_coord\u001b[38;5;241m.\u001b[39mitems()}\n\u001b[0;32m---> 38\u001b[0m v,iterations,residuals \u001b[38;5;241m=\u001b[39m \u001b[43mFSI\u001b[49m\u001b[43m(\u001b[49m\u001b[43mLx\u001b[49m\u001b[43m,\u001b[49m\u001b[43mLy\u001b[49m\u001b[43m,\u001b[49m\u001b[43mNx\u001b[49m\u001b[43m,\u001b[49m\u001b[43mNy\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmu\u001b[49m\u001b[43m,\u001b[49m\u001b[43mshear\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrhof\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrhos\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvin\u001b[49m\u001b[43m,\u001b[49m\u001b[43mscaleFactor\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmax_its\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtol\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvtk\u001b[49m\u001b[43m,\u001b[49m\u001b[43msolid_cells\u001b[49m\u001b[43m,\u001b[49m\u001b[43mon_interface\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     40\u001b[0m vmag \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(np\u001b[38;5;241m.\u001b[39msquare(v[\u001b[38;5;241m0\u001b[39m::\u001b[38;5;241m3\u001b[39m]\u001b[38;5;241m.\u001b[39mreshape(M,\u001b[38;5;241m1\u001b[39m))\u001b[38;5;241m+\u001b[39mnp\u001b[38;5;241m.\u001b[39msquare(v[\u001b[38;5;241m1\u001b[39m::\u001b[38;5;241m3\u001b[39m]\u001b[38;5;241m.\u001b[39mreshape(M,\u001b[38;5;241m1\u001b[39m)))\n\u001b[1;32m     41\u001b[0m p \u001b[38;5;241m=\u001b[39m v[\u001b[38;5;241m2\u001b[39m::\u001b[38;5;241m3\u001b[39m]\u001b[38;5;241m.\u001b[39mreshape(M,\u001b[38;5;241m1\u001b[39m)\n",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36mFSI\u001b[0;34m(Lx, Ly, Nx, Ny, mu, shear, dt, rhof, rhos, vin, scaleFactor, max_its, tol, vtk, solid_cells, on_interface)\u001b[0m\n\u001b[1;32m    331\u001b[0m \u001b[38;5;66;03m#     print(p[Nx])\u001b[39;00m\n\u001b[1;32m    332\u001b[0m     \u001b[38;5;66;03m#export to VTK format\u001b[39;00m\n\u001b[1;32m    333\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m vtk:\n\u001b[0;32m--> 334\u001b[0m         \u001b[43msolid_vtk_results\u001b[49m(v,dt\u001b[38;5;241m*\u001b[39mvmag[solid_cells],p[solid_cells],Nx,Ny,Lx,Ly,solid_cells,Re)\n\u001b[1;32m    335\u001b[0m         fluid_vtk_results(v,vmag,p,Nx,Ny,Lx,Ly,solid_cells,Re)        \n\u001b[1;32m    336\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m v,iterations,residuals\n",
       "\u001b[0;31mNameError\u001b[0m: name 'solid_vtk_results' is not defined"
      ]
     },
